[workspace]
members = ["crates/*"]
default-members = [
    "crates/lib",
    "crates/macros",
    "crates/backup",
    "crates/cleaner",
    "crates/country-ip",
    "crates/memorable-pass",
]
resolver = "2"

[workspace.package]
authors = ["Racci"]

edition = "2021"
homepage = "https://github.com/AMTSupport/tools"

license-file = "LICENSE.md"
readme = "README.md"

# Listing all common dependencies here to make sure they are all
# using the same versions, and to make it easier to update.
[workspace.dependencies]
# Runtimes
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }

# Cli & UI
clap = { version = "4.3.21", features = ["string", "derive", "color", "suggestions", "usage"] }
clap_complete = { version = "4.4.0", features = ["unstable-dynamic"] }
crossterm = { version = "0.27.0" }
indicatif = { version = "0.17.6", features = ["improved_unicode", "in_memory"] }
inquire = { git = "https://github.com/anwarhahjjeffersongeorge/inquire-filepath/", branch = "filepath-select" }

# GUI
iced = { version = "0.10.0", features = ["tokio"] }
iced_aw = { version = "^0.7.0", features = ["modal", "card"] }
iced_runtime = { version = "0.1.1" }

# TUI
ratatui = { version = "0.23.0" }

# Data / Serialization
serde = { version = "^1.0.183", features = ["derive"] }
serde_json = { version = "^1.0.104" }
toml = { version = "^0.7.4" }
chrono = { version = "^0.4.26" }
rand = { version = "^0.8.5" }
rust-embed = { version = "^8.0.0" }
zip = { version = "0.6.6" }

# Networking
reqwest = { version = "^0.11.18", features = ["gzip", "rustls"] }

# Logging & Errors
tracing = "0.1.*"
tracing-subscriber = { version = "0.3.*", features = ["fmt"] }
thiserror = "1.0.*"
anyhow = "1.0.*"


[profile.release]
opt-level = 2
lto = true
strip = true
panic = "abort"

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true

# build with `cargo build --profile ci`
# to analyze performance with tooling like linux perf
[profile.ci]
inherits = "dev"
strip = false
debug = false
