[workspace]
members = ["crates/*"]
default-members = [
    "crates/backup",
    "crates/country-ip",
    "crates/memorable-pass",
    "crates/sys-cleaner",
]
resolver = "2"

[workspace.package]
authors = ["Racci"]
edition = "2021"
repository = "https://github.com/AMTSupport/tools"
homepage = "https://github.com/AMTSupport/tools"
license-file = "LICENSE.md"
readme = "README.md"

# Listing all common dependencies here to make sure they are all
# using the same versions, and to make it easier to update.
[workspace.dependencies]
lib = { version = "0.2.0", path = "crates/lib" }
macros = { version = "0.2.0", path = "crates/macros" }

# Runtimes
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

# Cli & UI
clap = { version = "4.5.4", features = [
    "string",
    "derive",
    "color",
    "suggestions",
    "usage",
] }
clap_complete = { version = "4.5.1", features = ["unstable-dynamic"] }
crossterm = "0.28.1"
indicatif = { version = "0.17.8", features = ["improved_unicode", "in_memory"] }
inquire = { version = "0.6.2", git = "https://github.com/anwarhahjjeffersongeorge/inquire-filepath/", branch = "filepath-select" }
shlex = "1.3.0"

# GUI
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = { version = "0.11.0", features = ["card"] }
iced_runtime = "0.13.2"

# TUI
ratatui = "0.28.1"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
toml = "0.8.12"
quick-xml = { version = "0.36.2", features = ["serde", "serialize"] }
csv = { git = "https://github.com/gootorov/rust-csv.git", branch = "serde-flatten" }

# Data
downcast-rs = "1.2.0"
sysexits = "0.8.2"
chrono = { version = "0.4.37" }
rand = "0.8.5"
rust-embed = "8.3.0"
zip = { version = "2.2.0", default-features = false, features = [] }
bytes = "1.6.0"
regex = "1.10.4"
glob = "0.3.1"
readable-regex = "0.1.0-alpha1"

# Networking
reqwest = { version = "0.12.2", features = ["gzip", "rustls-tls"] }
reqwest-middleware = "0.3.3"
http-cache-reqwest = { version = "0.14.0", features = ["manager-moka"] }

# Logging & Errors
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
] }
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.6"
thiserror = "1.0.58"
anyhow = "1.0.81"
no-panic = "0.1.29"

# Futures and Async
futures = { version = "0.3.30", default-features = false }
futures-util = "0.3.30"
async-trait = "0.1.79"
async-compression = { version = "0.4.7", default-features = false }
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
rayon = "1.10.0"

# Misc
self_update = { version = "0.41.0", default-features = false, features = [
    "rustls",
] }
thirtyfour = "0.34.0"
is_elevated = "0.1.2"
rustix = "0.38.32"
evcxr = "0.17.0"
derivative = "2.2.0"

# Ast & Macros
syn = "2.0.58"
quote = "1.0.35"
const_format = "0.2.32"
paste = "1.0.14"
cfg-if = "1.0.0"
impls = "1.0.3"
proc-macro2 = "1.0.79"
prettyplease = "0.2.17"
litrs = "0.4.1"

# FileSystem & Paths
fs-err = "2.11.0"
filetime = "0.2.23"
tempfile = "3.10.1"
assert_fs = "1.1.1"

# Testing
fake = "2.9.2"
env_logger = "0.11.3"
test-log = { version = "0.2.15", features = ["trace", "tracing-subscriber"] }

[profile.release]
codegen-units = 1
opt-level = 2
lto = true
strip = true
panic = "abort"

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true

# build with `cargo build --profile ci`
# to analyze performance with tooling like linux perf
[profile.ci]
inherits = "dev"
strip = false
debug = false
