[workspace]
members = ["crates/*"]
default-members = [
    # Libraries
    "crates/amt-lib",
    "crates/amt-macros",
    "crates/obj-builder",
    # Applications
    "crates/backup",
    "crates/country-ip",
    "crates/memorable-pass",
    "crates/sys-cleaner",
]
resolver = "2"

[workspace.package]
authors = ["Racci"]
edition = "2021"
repository = "https://github.com/AMTSupport/tools"
homepage = "https://github.com/AMTSupport/tools"
license-file = "LICENSE.md"
readme = "README.md"

# Listing all common dependencies here to make sure they are all
# using the same versions, and to make it easier to update.
[workspace.dependencies]
amt-lib = { version = "0.2.1", path = "crates/amt-lib" }
amt-macros = { version = "0.2.0", path = "crates/amt-macros" }
obj-builder = { version = "0.1.0", path = "crates/obj-builder" }

# Runtimes
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

# Cli & UI
clap = { version = "4.5.23", features = [
    "string",
    "derive",
    "color",
    "suggestions",
    "usage",
] }
clap_complete = { version = "4.5.38", features = ["unstable-dynamic"] }
indicatif = { version = "0.17.8", features = ["improved_unicode", "in_memory"] }
inquire = { version = "0.6.2", git = "https://github.com/anwarhahjjeffersongeorge/inquire-filepath/", branch = "filepath-select" }
shlex = "1.3.0"

# GUI
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = { version = "0.11.0", features = ["card"] }
iced_runtime = "0.13.2"
notify-rust = "4.11.3"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde-json-fmt = "0.1.0"
serde_with = "3.7.0"
toml = "0.8.19"
quick-xml = { version = "0.37.1", features = ["serde", "serialize"] }
csv = { git = "https://github.com/gootorov/rust-csv.git", branch = "serde-flatten" }

# Data
downcast-rs = "1.2.0"
sysexits = "0.8.2"
chrono = "0.4.39"
rand = "0.8.5"
rust-embed = "8.3.0"
zip = { version = "2.2.0", default-features = false, features = [] }
bytes = "1.6.0"
regex = "1.10.4"
glob = "0.3.1"
opendal = "0.50.2"
cidr = "0.3.0"
keshvar = "0.5.0"
uptime_lib = "0.3.1"

# Networking
reqwest = { version = "0.12.9", features = ["gzip", "rustls-tls"] }
reqwest-middleware = "0.4.0"
http-cache-reqwest = { version = "0.15.0", features = ["manager-moka"] }

# Logging & Errors
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
] }
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.6"
thiserror = "2.0.6"
anyhow = "1.0.94"
no-panic = "0.1.32"

# Futures and Async
futures = { version = "0.3.30", default-features = false }
futures-util = "0.3.30"
async-trait = "0.1.79"
async-compression = { version = "0.4.7", default-features = false }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
rayon = "1.10.0"

# Misc
self_update = { version = "0.41.0", default-features = false, features = [
    "rustls",
] }
thirtyfour = "0.35.0"
is_elevated = "0.1.2"
rustix = "0.38.42"
evcxr = "0.18.0"
derivative = "2.2.0"

# Ast & Macros
syn = "2.0.90"
quote = "1.0.35"
const_format = "0.2.34"
paste = "1.0.14"
cfg-if = "1.0.0"
impls = "1.0.3"
proc-macro2 = "1.0.79"
prettyplease = "0.2.25"
litrs = "0.4.1"

# FileSystem & Paths
fs-err = "3.0.0"
filetime = "0.2.23"
tempfile = "3.10.1"
assert_fs = "1.1.1"

# Testing
fake = "3.0.1"
env_logger = "0.11.3"
test-log = { version = "0.2.16", features = ["trace"] }

# Windows
planif = "1.0.0"
registry = "1.2.3"

[profile.release]
codegen-units = 1
opt-level = 2
lto = true
strip = true
panic = "abort"

# build with `cargo build --profile profiling`
# to analyse performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true

# build with `cargo build --profile ci`
# to analyse performance with tooling like linux perf
[profile.ci]
inherits = "dev"
strip = false
debug = false
