[package]
name = "amt-lib"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
description = """
A general purpose library for development of AMT Tools.
"""

[features]
default = ["ui-cli"]

ui-cli = ["indicatif", "inquire", "tracing-indicatif"]
ui-cli-formatting = []
ui-repl = ["ui-cli", "shlex"]

updater = ["self_update", "const_format"]

[dependencies]
# Cli & UI
clap.workspace = true
indicatif = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }
shlex = { workspace = true, optional = true }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Updater
self_update = { workspace = true, optional = true }

sysexits.workspace = true
cfg-if.workspace = true
paste.workspace = true

const_format = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
is_elevated.workspace = true
#winres = "0.1.12"
