[package]
name = "amt-macros"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
description = """
A collection of procedural macros used for development of AMT tools.
"""

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true
