[package]
name = "backup"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities", "system", "utilities", "cli"]
keywords = ["backup"]

[[bin]]
name = "backup"
path = "src/main.rs"

[features]
default = ["ui-cli", "sources-s3", "sources-bitwarden", "sources-1password"]
binary-downloader = ["bytes", "rand", "const_format"]

ui-cli = ["indicatif", "inquire", "lib/ui-cli"]
ui-tui = ["ratatui", "crossterm", "lib/ui-tui"]

sources-s3 = ["opendal", "futures"]
sources-bitwarden = ["binary-downloader"]
sources-1password = ["binary-downloader", "zip"]

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio = { workspace = true }

# Cli & UI
clap = { workspace = true }
indicatif = { workspace = true, features = ["rayon"], optional = true }
inquire = { workspace = true, features = ["path"], optional = true }

# TUI
ratatui = { workspace = true, features = ["all-widgets"], optional = true }
crossterm = { workspace = true, optional = true }

# Data / Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde","clock"] }
zip = { workspace = true, features = ["zstd", "bzip2", "deflate", "deflate-zlib"], optional = true } # TODO :: Downsize features

# Networking
reqwest = { workspace = true }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

fs-err = "2.9.0"
filetime = "0.2.22"
glob = "0.3.1"
readable-regex = "0.1.0-alpha1"
paste = "1.0.14"

opendal = { version = "0.40.0", features = ["services-s3", "rustls"], optional = true }

# Futures & Async
futures = { workspace = true, optional = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
rayon = { workspace = true }

# For downloading cli binaries
bytes = { version = "1.5.0", optional = true }
rand = { version = "0.8.*", optional = true }
const_format = { version = "0.2.31", optional = true }
tempfile = "3.8.0"
regex = "1.9.5"

[dependencies.value-bag]
version = "1.4.0"

[dev-dependencies]
# Logging & Errors
env_logger = "*"
test-log = { version = "0.2.12", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# Generating random data for tests
fake = { version = "2.6", features=["derive", "chrono", "serde_json", "maybe-non-empty-collections"]}
rand = "0.8"

# Fs & IO
tempdir = "0.3.7"
assert_fs = "1.0.13"

