[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities", "system", "utilities", "cli"]
keywords = ["cleaner", "clean", "cleaning", "cleaning-tool", "cleaning-utility"]
description = "A cleaning tool written in Rust"

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio = { workspace = true }

# Cli & UI
clap = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }

cfg-if = "1.0"
chrono = { version = "0.4.24" }
glob = "0.3.1"
rayon = "1.7"
michie = "3.0.2"
async-trait = "0.1.71"
lazy_static = "1.4.0"
downcast-rs = "1.2.0"

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
permissions = "0.4.1"
