[package]
name = "country-ip"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["random", "ip", "testing", "geo", "country"]
description = "A command line utility to generate random IP addresses from a given country."

[lib]
name = "country_ip"
path = "src/lib.rs"

[features]
default = ["ui-cli"]

ui-cli = ["lib/ui-cli", "indicatif", "tracing-indicatif"]
#ui-gui = ["lib/ui-gui", "iced", "iced_aw"]

updater = ["lib/updater"]

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio = { workspace = true }

# Cli & UI
clap = { workspace = true }
indicatif = { workspace = true, optional = true }

# GUI
iced = { workspace = true, optional = true }
iced_aw = { workspace = true, optional = true }

# Networking
reqwest = { workspace = true, features = ["stream"] }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

rand = { version = "0.8.5", features = ["small_rng"] }

cidr = "0.2.2"

# Futures & Async
futures = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
async-compression = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
rayon = { workspace = true }

# Countries
keshvar = { version = "0.3.0", features = ["search-iso-short-name"] }

# Testing
[dev-dependencies]
env_logger = "*"
test-log = { version = "0.2.12", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
