[package]
name = "country-ip"
version = "0.1.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["random", "ip", "testing", "geo", "country"]
description = "A command line utility to generate random IP addresses from a given country."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

[lib]
name = "country_ip"
path = "src/lib.rs"

[[bin]]
name = "country-ip"
path = "src/main.rs"
required-features = ["ui-cli"]

[features]
default = ["ui-cli"]
ui-cli = ["amt-lib/ui-cli", "indicatif", "tracing-indicatif"]
updater = ["amt-lib/updater"]

[dependencies]
amt-lib.workspace = true
amt-macros.workspace = true

# Runtimes
tokio.workspace = true

# Cli & UI
clap.workspace = true
indicatif = { workspace = true, optional = true }

# GUI
iced = { workspace = true, optional = true }
iced_aw = { workspace = true, optional = true }

# Networking
reqwest = { workspace = true, features = ["stream"] }

# Logging & Errors
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-indicatif = { workspace = true, optional = true }
thiserror.workspace = true
anyhow.workspace = true

# Misc
chrono.workspace = true
rand = { workspace = true, features = ["small_rng"] }
cidr.workspace = true
keshvar = { workspace = true, features = ["search-iso-short-name"] }

# Futures & Async
futures = { workspace = true, features = ["std"] }
async-trait.workspace = true
async-compression.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
rayon.workspace = true

# Testing
[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
