[package]
name = "interfacer"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

[[bin]]
name = "interfacer"
path = "src/main.rs"

[features]
default = ["ui-cli", "endpoint-hudu", "endpoint-nable"]

ui-cli = ["indicatif", "inquire"]
endpoint-hudu = []
endpoint-nable = []

[dependencies]
lib.workspace = true
macros.workspace = true

# Runtimes
tokio.workspace = true

# Cli & UI
clap.workspace = true
indicatif = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }

# Data & Serialization
serde.workspace = true
quick-xml.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Networking
reqwest = { workspace = true, features = ["json", "gzip", "cookies", "deflate"] }
reqwest-middleware.workspace = true
http-cache-reqwest.workspace = true
thirtyfour.workspace = true

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["tracing-log"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Data
csv.workspace = true
serde_with.workspace = true

#async-trait = "0.1.68"
#async-lazy = "0.1.0"
#cached = "0.43.0"
#michie = { version = "3.0.2" }
#skim = "0.10.4"
#regex = "1.8.1"
#fuzzy-matcher = "0.3.7"

# Testing
[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "fmt"] }


#[patch.crates-io]
#csv = { git = "https://github.com/gootorov/rust-csv.git", branch = "serde-flatten" }
