[package]
name = "interfacer"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

[[bin]]
name = "interfacer"
path = "src/main.rs"

[features]
default = ["ui-cli", "endpoint-hudu", "endpoint-nable"]

ui-cli = ["indicatif", "inquire"]
endpoint-hudu = []
endpoint-nable = []

[dependencies]
amt-lib.workspace = true
amt-macros.workspace = true

# Runtimes
tokio.workspace = true

# Cli & UI
clap.workspace = true
indicatif = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }

# Data & Serialization
serde.workspace = true
quick-xml.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Networking
reqwest = { workspace = true, features = ["json", "gzip", "cookies", "deflate"] }
reqwest-middleware.workspace = true
http-cache-reqwest.workspace = true
thirtyfour.workspace = true

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["tracing-log"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Data
csv.workspace = true
serde_with.workspace = true

# Testing
[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "fmt"] }
