[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[features]
default = []

ui-tui = ["ratatui", "crossterm"]
ui-cli = ["indicatif", "inquire", "shlex", "tracing-indicatif"]
ui-gui = ["iced", "iced_aw"]

[dependencies]
# Cli & UI
clap = { workspace = true }
indicatif = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }
shlex = { version = "1.2.0", default-features = false, optional = true }

# TUI
ratatui = { workspace = true, features = ["all-widgets"], optional = true }
crossterm = { workspace = true, optional = true }

# GUI
iced = { workspace = true, optional = true }
iced_aw = { workspace = true, optional = true }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

sysexits = "0.7.2"
cfg-if = "1.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.14", features = ["process"] }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
winres = "0.1.12"