[package]
name = "lib"
version = "0.1.1"
edition = "2021"

[features]
default = ["ui-cli"]

ui-tui = ["ratatui", "crossterm"]
ui-cli = ["indicatif", "inquire", "tracing-indicatif"]
ui-gui = ["iced", "iced_aw"]
ui-repl = ["ui-cli", "shlex"]

builder = []
updater = ["self_update"]

[dependencies]
impls = "1.0.3"
macros = { path = "../macros" }

# Cli & UI
clap = { workspace = true }
indicatif = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }
shlex = { version = "1.2.0", default-features = false, optional = true }

# TUI
ratatui = { workspace = true, features = ["all-widgets"], optional = true }
crossterm = { workspace = true, optional = true }

# GUI
iced = { workspace = true, optional = true }
iced_aw = { workspace = true, optional = true }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Updater
self_update = { workspace = true, optional = true }

sysexits = "0.7.2"
cfg-if = "1.0"
paste = "1.0.14"

no-panic.workspace = true
const_format.workspace = true
syn = "2.0.38"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.14", features = ["process"] }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
#winres = "0.1.12"