[package]
name = "lib"
version = "0.2.0"
edition = "2021"

[features]
default = ["ui-cli"]

ui-tui = ["ratatui", "crossterm"]
ui-cli = ["indicatif", "inquire", "tracing-indicatif"]
ui-cli-formatting = []
ui-gui = ["iced", "iced_aw"]
ui-repl = ["ui-cli", "shlex"]

builder = []
updater = ["self_update"]

[dependencies]
impls.workspace = true
macros = { path = "../macros" }

# Cli & UI
clap.workspace = true
indicatif = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }
shlex = { workspace = true, optional = true }

# TUI
ratatui = { workspace = true, features = ["all-widgets"], optional = true }
crossterm = { workspace = true, optional = true }

# GUI
iced = { workspace = true, optional = true }
iced_aw = { workspace = true, optional = true }

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Updater
self_update = { workspace = true, optional = true }

sysexits.workspace = true
cfg-if.workspace = true
paste.workspace = true

no-panic.workspace = true
const_format.workspace = true
syn.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
is_elevated.workspace = true
#winres = "0.1.12"