[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.22"
quote = "1.0.28"
proc-macro2 = "1.0.63"
downcast-rs = "1.2.0"

# Compile time quote parsing
impls = "1.0.3"
litrs = "0.4.1"
paste = "1.0.14"
evcxr = "0.16.0"
prettyplease = "0.2.15"

# Logging & Errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
