[package]
name = "macros"
version = "0.2.0"
edition = "2021"

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
downcast-rs.workspace = true

# Compile time quote parsing
impls.workspace = true
litrs.workspace = true
paste.workspace = true
evcxr.workspace = true
prettyplease.workspace = true

# Logging & Errors
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
