[package]
name = "memorable-pass"
version = "0.1.0"
authors = ["Racci <racci@racci.dev>"]
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["generator", "password", "memorable"]
description = "A memorable password generator written in Rust"

[[bin]]
name = "memorable-pass"
path = "src/main.rs"

[features]
default = ["ui-cli"]

ui-cli = ["lib/ui-cli"]

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio = { workspace = true }
tokio-stream.workspace = true
futures-util = "0.3.28"

# Cli & UI
clap = { workspace = true }
#clap_complete = { workspace = true }

# Data
rand = { workspace = true, small_rng = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rust-embed = { workspace = true }

# Logging & Errors
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
#thiserror.workspace = true
anyhow.workspace = true

derivative = { version = "2.2.0" }

[dev-dependencies]
# Logging & Errors
env_logger = "*"
test-log = { version = "0.2.12", features = ["trace"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "fmt"] }

regex = "1.9.5"

[build-dependencies]
#reqwest = { workspace = true, features = ["blocking","stream"] }
#zip = { workspace = true }
#
#csv = "1.2.2"
#bytes = "1.5.0"
#serde = { workspace = true, features = ["derive"] }
#serde_json = { workspace = true }
#
#anyhow = { workspace = true }
#tracing = { workspace = true }
#thiserror = { workspace = true }