[package]
name = "memorable-pass"
version = "0.1.1"
authors = ["Racci <racci@racci.dev>"]
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["generator", "password", "memorable"]
description = "A memorable password generator written in Rust"

[[bin]]
name = "memorable-pass"
path = "src/main.rs"

[features]
default = ["ui-cli"]

ui-cli = ["lib/ui-cli", "lib/ui-cli-formatting"]

[dependencies]
lib = { path = "../lib" }
macros = { path = "../macros" }

# Runtimes
tokio.workspace = true

# Async
tokio-stream.workspace = true

# Cli & UI
clap.workspace = true

# Data
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rust-embed.workspace = true

# Logging & Errors
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true

derivative.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
regex.workspace = true

[build-dependencies]
#reqwest = { workspace = true, features = ["blocking","stream"] }
#zip = { workspace = true }
#
#csv = "1.2.2"
#bytes = "1.5.0"
#serde = { workspace = true, features = ["derive"] }
#serde_json = { workspace = true }
#
#anyhow = { workspace = true }
#tracing = { workspace = true }
#thiserror = { workspace = true }