[package]
name = "memorable-pass"
version = "0.1.1"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["generator", "password", "memorable"]
description = "A memorable password generator written in Rust"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

[[bin]]
name = "memorable-pass"
path = "src/main.rs"

[features]
default = ["ui-cli", "amt-lib/updater"]

ui-cli = ["amt-lib/ui-cli", "amt-lib/ui-cli-formatting"]

[dependencies]
amt-lib.workspace = true
amt-macros.workspace = true

# Runtimes
tokio.workspace = true

# Async
tokio-stream.workspace = true

# Cli & UI
clap.workspace = true

# Data
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rust-embed = { workspace = true, features = ["debug-embed"] }

# Logging & Errors
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true

derivative.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
regex.workspace = true
