[package]
name = "rpgen"
version = "0.1.1"
authors = ["Racci <racci@racci.dev>"]
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["generator", "password"]
description = "A password generator written in Rust"

[dependencies]
tokio = { version = "1.28.1", features = ["rt", "macros", "sync"]}
lib = { path = "../lib" }
async-trait = "0.1.68"
clap = { version = "4.2.7", features = ["derive", "cargo"] }
simplelog = { version = "0.12.1", features = ["paris"] }
serde = { version = "1.0.163", features = ["derive"] }
anyhow = "1.0.71"
serde_json = "1.0.59"
rand = "0.8.5"
rust-embed="6.4.0"
strum = "0.24.0"
strum_macros = "0.24"
dirs = "5.0.1"
toml = "0.7.4"
